--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -3,7 +3,7 @@
     "message": "ChatGPT Usage Limit Tracker"
   },
   "extensionDescription": {
-    "message": "Track usage for all ChatGPT Plus models."
+    "message": "Track usage limits (quotas) for all ChatGPT models."
   },
   "period_prefix": {
     "message": "Every"
@@ -25,5 +25,23 @@
   },
   "period_hours": {
     "message": "hours"
+  },
+  "loading": {
+    "message": "Loading…"
+  },
+  "error": {
+    "message": "Error."
+  },
+  "plan_free": {
+    "message": "Free"
+  },
+  "plan_plus": {
+    "message": "Plus"
+  },
+  "plan_team": {
+    "message": "Team"
+  },
+  "plan_pro": {
+    "message": "Pro"
   }
 }
